# ai-engineering-hub

./: .env.example  .gitignore  CONTRIBUTING.md  Munna bihari ka sarver  README.md  package.json
Build-reasoning-model/: Own_reasoning_model_with_GRPO.ipynb  fix_notebooks.py  validate_nb.py
DeepSeek-finetuning/: Fine_tune_DeepSeek.ipynb
Youtube-trend-analysis/: app.py  brightdata_scrapper.py  config.yaml
acp-code/: README.md
ai-avatar-demo/: .env.example  .gitignore  README.md  app.py  backend.py  pyproject.toml  zep_demo.ipynb
ai-avatar-demo/config/: settings.py
ai-avatar-demo/data/: README.md  chunked-docs.json
ai-avatar-demo/scripts/: ingest_to_graph.py
ai-avatar-demo/services/: __init__.py  anam_service.py  llm_service.py  zep_service.py
ai-engineering-roadmap/: README.md
ai-podcast-generation/: .env.example  .gitignore
ai-podcast-generator/: .env.example  .gitignore  README.md  app.py  pyproject.toml  scraper.py  script_generator.py  tts_converter.py
ai_news_generator/: .gitignore  CREWAI_FLOW_INTEGRATION_SUMMARY.md  README.md  app.py  app_flow.py  demo_flow.py  main.py  news_flow.py  pyproject.toml  requirements.txt  test_flow.py  test_simple.py  test_structure.py
ai_news_generator/src/ai_news_flow/: main.py  models.py
ai_news_generator/src/ai_news_flow/crews/content_crew/: content_crew.py
ai_news_generator/src/ai_news_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
ai_news_generator/src/ai_news_flow/crews/editing_crew/: editing_crew.py
ai_news_generator/src/ai_news_flow/crews/editing_crew/config/: agents.yaml  tasks.yaml
ai_news_generator/src/ai_news_flow/crews/research_crew/: research_crew.py
ai_news_generator/src/ai_news_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
ai_news_generator/src/ai_news_flow/tools/: custom_tools.py
brightdata_deep_researcher/: .env.example  README.md  flow.py  output.md  pyproject.toml  research.py
code-model-comparison/: app.py  model_service.py
content-planner-motia/: .env.example  .gitignore  PYTHON_CONVERSION.md  package-lock.json  package.json  requirements.txt  tsconfig.json
content-planner-motia/config/: index.js  index.py
content-planner-motia/prompts/: analyze-content.txt  generate-linkedin.txt  generate-twitter.txt
content-planner-motia/types/: events.ts
context-engineering-pipeline/: README.md  context_engineering_notebook.ipynb
context-engineering-workflow/: README.md
crewai-agentic-flow-demo/: .env.example  .gitignore  README.md  pyproject.toml  run_flow.py  test_basic.py
crewai-agentic-flow-demo/src/crewai_agentic_flow/: __init__.py
crewai-agentic-flow-demo/src/crewai_agentic_flow/agents/: __init__.py  researcher_agent.py  writer_agent.py
crewai-agentic-flow-demo/src/crewai_agentic_flow/flows/: __init__.py  research_flow.py
crewai-agentic-flow-demo/src/crewai_agentic_flow/tools/: __init__.py  firecrawl_tool.py
finnews-agent-writer-crewai/: README.md  generated_blog.md  helper.py  main.ipynb  requirements.txt
firecrawl-agent/: .beamignore  README.md
form-filling-automation/: .env.example  README.md  app.py  flow.py  main.py  models.py  pyproject.toml  tools.py
form-filling-automation/schemas/: w9.yaml
groundX-doc-pipeline/: .env.example  README.md  app.py  evaluation_geval.py  groundx_utils.py  pyproject.toml  run_evaluation_cli.py  server.py
guidelines-vs-traditional-prompt/: .env.example  README.md  demo_comparison.py  parlant_agent_server.py  parlant_client_utils.py  pyproject.toml  rich_table_formatter.py  traditional_llm_prompt.py
job-automation-agent/: .env.example  README.md  agent_tools.py  flow.py  job_automation.py  main.py  models.py  pyproject.toml  software-engineer-resume.docx  util.py
job-automation-agent/config/: agents.yaml  tasks.yaml
location-website/: README.md  index.html  script.js  styles.css
minimaxm2-vs-sonnet4-5-vs-kimik2/: .opik.config  README.md  app.py  pyproject.toml
minimaxm2-vs-sonnet4-5-vs-kimik2-vs-gemini3/: .opik.config  README.md  app.py  model_service.py  pyproject.toml
motia-content-creation/: .gitignore  README.md  package.json
multilingual-meeting-notes-generator/: README.md  app.py  env_example.txt  pyproject.toml
multilingual-meeting-notes-generator/src/data/: data_models.py
multilingual-meeting-notes-generator/src/services/: audio_processor.py  text_analyzer.py  transcriber.py
multilingual-meeting-notes-generator/src/ui/: ui_components.py
multiplatform_deep_researcher/: .env.example  README.md  app.py  flow.py  research.py
notebook-lm-clone/: app.py
o3-vs-claude-code/: data_prep.ipynb
online-tic-tac-toe/: .gitignore  QUICK_START.md  README.md  game.html  game.js  index.html  netlify.toml  package.json  style.css  vercel.json
open-agent-builder/: README.md  colors.json  package-lock.json  package.json  tsconfig.tsbuildinfo
openclaw-secure-deployment/: openclaw-secure-deployment-guide.md
parlant-conversational-agent/: .gitignore  README.md  loan_approval.py  pyproject.toml
rag-with-dockling/: README.md
real-time-voicebot/: .env.example  README.md  app.py
sales-analytics-agent/: QUERY.md  README.md  main.py
src/: app.js  index.js
sre-agent-xpander.ai/: README.md  requirements.txt  sre_agent.py  xpander_config.json.example  xpander_handler.py
stagehand x mcp-use/: agent_wrapper.py
tests/: auth.test.js  tasks.test.js
youtube-zero-shot-classifier/: LICENSE  README.md  YouTube_Comment_Classifier_with_Zero_Shot_Learning.ipynb  requirements.txt
(+64 files in other folders)
